--- a/src/app/book-entity/book-entity.component.html
+++ b/src/app/book-entity/book-entity.component.html
@@ -5,11 +5,39 @@
         <p id="By-Author">by
             <span (click)="GetAuthorByID()" routerLink="/author" id="Author-name">{{bookauthor[book_index]}}</span></p>
             <button mat-button [matMenuTriggerFor]="menu" class="want-to-read" id='first-option'>{{bookstatus[book_index]}}</button>
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="book_status('second-option')" id='second-option'>{{type1}}</button>
-            <button mat-menu-item (click)="book_status('third-option')" id='third-option'>{{type2}}</button>
-        </mat-menu>
-        <button mat-stroked-button id="rate">Rate </button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="book_status_Post('first-option','second-option')" id='second-option'>{{type1}}</button>
+                <button mat-menu-item (click)="book_status_Post('first-option','third-option')" id='third-option'>{{type2}}</button>
+                <button mat-menu-item (click)="book_status_Post('first-option','fourth-option')" id='fourth-option'>{{type3}}</button>
+            </mat-menu>
+            <button mat-button [matMenuTriggerFor]="menu2" id="rate">Rate</button>
+            <mat-menu #menu2="matMenu">
+                <button mat-menu-item id='rate-first' (click)="PostRate('rate-first')">
+                        <span class="fa fa-star" id="checked"></span>
+                </button>
+                <button mat-menu-item id='rate-second' (click)="PostRate('rate-second')">
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                </button>
+                <button mat-menu-item id='rate-third' (click)="PostRate('rate-third')">
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                </button>
+                <button mat-menu-item id='rate-fourth' (click)="PostRate('rate-fourth')">
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                </button>
+                <button mat-menu-item id='rate-fifth' (click)="PostRate('rate-fifth')">
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                        <span id="checked" class="fa fa-star"></span>
+                </button>
+            </mat-menu>
     </div>
 
 </div>
