--- a/src/app/reviews-entity/reviews-entity.component.html
+++ b/src/app/reviews-entity/reviews-entity.component.html
@@ -1,7 +1,7 @@
 <div id="user-reviews">
   <img class="reviewer-image" src="{{reviewerimage[0]}}">
   <div>
-      <p id="Reviewer-name">{{reviewername[0]}}
+      <p routerLink="/profile" id="Reviewer-name">{{reviewername[0]}}
           <span id="rate-it">rated a book</span>
           <span class="fa fa-star checked" class="dots"></span>
           <span class="fa fa-star checked"></span>
@@ -14,18 +14,23 @@
 </div>
 <div id="review-comment">
     <div id="Book-info">
-        <img class="Book-image" src="{{bookimage[0]}}">
+        <img class="Book-image" routerLink="/book" src="{{bookimage[0]}}">
         <div id="Book-Title">
             <h4 id="book_title_font">{{booktitle[0]}}</h4>
-            <p id="By-Author">by <span id="Author-name">{{bookauthor[0]}}</span></p>
-            <button id="want-to-read" mat-raised-button color="primary">Want To Read | <mat-icon>library_add</mat-icon></button>
+            <p id="By-Author">by <span routerLink="/author" id="Author-name">{{bookauthor[0]}}</span></p>
+            <button mat-button [matMenuTriggerFor]="menu" class="want-to-read" id='first-option'>{{bookstatus}}</button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="book_status_Post('first-option','second-option')" id='second-option'>{{type1}}</button>
+                <button mat-menu-item (click)="book_status_Post('first-option','third-option')" id='third-option'>{{type2}}</button>
+                <button mat-menu-item (click)="book_status_Post('first-option','fourth-option')" id='fourth-option'>{{type3}}</button>
+            </mat-menu>
         </div>
     </div>
     <p id="date_read_book">read in <span>{{bookreaddate[0]}}</span></p>
     <p>{{befor_dots[0]}}<span id="dots-user-review">...</span><span id="more-review"> {{after_dots[0]}}</span> <button (click)="more_review_discription()" id="myBtn-user-review" mat-button>Read Full Review</button></p>
 </div>
 <div id="review-like-comment">
-  <p class="blue-text">Like</p>
+  <p (click)="OnclickLike()" id="liked" class="blue-text">Like</p>
   <p class="dots">.</p>
   <i class="thumbs-up">	<mat-icon>thumb_up_alt</mat-icon></i>
   <p type="text" class="dots" id="show-likes">{{reviewerlikes[0]}}</p>
