--- a/src/app/book-comment-user/book-comment-user.component.css
+++ b/src/app/book-comment-user/book-comment-user.component.css
@@ -169,3 +169,54 @@
 {
     color: #00635D;
 }
+#user-image-comment
+{
+    margin-left: 30px;
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    border: darkgray 2px outset;
+}
+#user-input
+{
+    width:85%;
+    margin-left: 40px;
+}
+#comment-send-bt
+{
+    background-color: gainsboro;
+    margin-left: 10px;
+}
+#adding-comment
+{
+    background-color:white;
+    margin-bottom: 0px;
+}
+#radio-space {
+    margin-left: 10px;
+}
+#checked {
+    color: orange;
+}
+#rate-part span {
+    color:orange;
+}
+#rate-part {
+    margin-left: 20px;
+    margin-bottom: 30px;
+}
+#rate{
+    margin-left: auto;
+}
+#space {
+    margin-left: 5px;
+}
+#show-reviews {
+    width: 90%;
+    margin-left: 60px;
+}
+#user-reviews {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
