--- a/src/app/reviews-entity/reviews-entity.component.css
+++ b/src/app/reviews-entity/reviews-entity.component.css
@@ -7,6 +7,9 @@
 #rate-it {
     color: rgb(88, 88, 88);
 }
+#first-option {
+    background-color: rgb(170, 154, 154);
+}
 .checked {
     color: orange;
 }
