--- a/src/app/genres/genres.component.html
+++ b/src/app/genres/genres.component.html
@@ -1,9 +1,8 @@
 <div class="navbar-margin"></div>
 <h1>Genres</h1>
-
-
+<div>
 <div class="genres-row-container">
-    <app-genre-row></app-genre-row>
-    <app-genre-row></app-genre-row>
-    <app-genre-row></app-genre-row>
+    <app-genre-row [genreType]='genreType1' [showGenreName]="true"> </app-genre-row>
+    <app-genre-row [genreType]='genreType2' [showGenreName]="true"> </app-genre-row>
+    <app-genre-row [genreType]='genreType3' [showGenreName]="true"> </app-genre-row>
 </div>
