--- a/src/app/newsfeed-comment-post/newsfeed-comment-post.component.css
+++ b/src/app/newsfeed-comment-post/newsfeed-comment-post.component.css
@@ -1,10 +1,10 @@
 .example-card {
-  width: 600px;
+  width:100% ;
   margin: 0px;
   }
   
   .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-image: url("https://tse1.mm.bing.net/th?id=OIP.JchDxbr-ajB0-wbB1h5BBgAAAA&pid=15.1&P=0&w=300&h=3");
     background-size: cover;
   }
   .header{
@@ -15,4 +15,8 @@
   .activity{
     color: brown ; 
     margin: 0px 0 ; 
+    display: flex;
+  }
+  .body{
+    margin-left: 8.5%;
   }
