--- a/src/app/newsfeed-post/newsfeed-post.component.html
+++ b/src/app/newsfeed-post/newsfeed-post.component.html
@@ -3,13 +3,13 @@
     <div class="card-header">
         <mat-card-header>
             <!--image -->
-            <div mat-card-avatar class="activity-header-image"> </div>
+            <div mat-card-avatar class="activity-header-image">  </div>
             <!--name -->
-            <mat-card-title class="name">{{username}}</mat-card-title>
+            <mat-card-title class="name">{{userName}}</mat-card-title>
            
             <!--activiy status-->
             <div class="activity">
-                <p>{{activity}}</p>
+                <p >rated a book{{activity}}</p>
             </div>
             <!-- display the ratigs -->
             <div class="stars">
@@ -25,7 +25,7 @@
     </div>
     <!--ending of the class "card header"-->
     <mat-card-subtitle>
-        <p class="subtitle">{{activitydate}}</p>
+        <p class="subtitle">{{activityDate}}</p>
     </mat-card-subtitle>
 
 
@@ -43,7 +43,10 @@
             <!--right part starts here-->
             <p class="book-name-style"> {{bookname}}</p>
             <p class="author-name-style">{{authorname}}</p>
-            <button id="wantToRead">Want to read</button>
+             <!-- <button *ngIf="bookstatus==='WantToRead' " id="wantToRead" (click)="changeToReading()">want to read</button> 
+            <button *ngIf="bookstatus==='Reading' " id="Reading" > Reading</button>
+            <button *ngIf="bookstatus==='Read' " id="Read" >Read</button>
+            <button *ngIf="bookstatus==='null' " id="null">Read</button> -->
         </div>
     </div>
 
