--- a/src/app/newsfeed-comment-post/newsfeed-comment-post.component.html
+++ b/src/app/newsfeed-comment-post/newsfeed-comment-post.component.html
@@ -1,13 +1,13 @@
 <mat-card class="example-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>kiro{{userName}}</mat-card-title>
-    <div><h5 class="activity">Commented on a post</h5></div> 
-    <mat-card-subtitle>about 2 hours ago{{activityDate}}</mat-card-subtitle>
+    <mat-card-title>{{userName}}</mat-card-title>
+    <div><h5 class="activity">{{activityLog}}</h5></div> 
+    <mat-card-subtitle>{{activityDate}}</mat-card-subtitle>
   </mat-card-header>
     <mat-card-content>
-    <p>
-     this was really great{{comment}}
+    <p class="body">
+     {{comment}}
     </p>
   </mat-card-content>
 </mat-card>
