--- a/src/app/book-comment-user/book-comment-user.component.html
+++ b/src/app/book-comment-user/book-comment-user.component.html
@@ -198,18 +198,18 @@
                         <span class="fa fa-star" id="checked"></span>
                         <span class="fa fa-star" id="checked"></span>
                 </mat-radio-button>
-                <mat-radio-button id="radio-space" value="3">
+                <mat-radio-button value="3">
                         <span class="fa fa-star" id="checked"></span>
                         <span class="fa fa-star" id="checked"></span>
                         <span class="fa fa-star" id="checked"></span>
                 </mat-radio-button>
-                <mat-radio-button id="radio-space" value="4">
+                <mat-radio-button value="4">
                         <span class="fa fa-star" id="checked"></span>
                         <span class="fa fa-star" id="checked"></span>
                         <span class="fa fa-star" id="checked"></span>
                         <span class="fa fa-star" id="checked"></span>
                 </mat-radio-button>
-                <mat-radio-button id="radio-space" value="5">
+                <mat-radio-button value="5">
                         <span class="fa fa-star" id="checked"></span>
                         <span class="fa fa-star" id="checked"></span>
                         <span class="fa fa-star" id="checked"></span>
